--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "dev": "vite"
     },
     "devDependencies": {
+        "@shufo/prettier-plugin-blade": "^1.13.4",
         "@tailwindcss/vite": "^4.0.0",
         "axios": "^1.8.2",
         "concurrently": "^9.0.1",
