--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     },
     "devDependencies": {
         "@shufo/prettier-plugin-blade": "^1.13.4",
+        "@tailwindcss/forms": "^0.5.10",
         "@tailwindcss/vite": "^4.0.0",
+        "alpinejs": "^3.4.2",
         "axios": "^1.8.2",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.2.0",
